# amwaj-media

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config.toml
.github/workflows/: ci.yml
examples/: basic_server.rs
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  pvc.yaml  service.yaml
protos/: amwaj.proto
scripts/: download_models.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/audio/: features.rs  mod.rs  processor.rs  vad.rs  voice_isolation.rs
src/detection/: mod.rs  multi_signal.rs  turn_detection.rs
src/grpc/: mod.rs  server.rs  service.rs
src/metrics/: latency_tracker.rs  mod.rs  prometheus.rs
src/session/: distributed_state.rs  mod.rs
src/webrtc/: codec.rs  ice.rs  jitter_buffer.rs  mod.rs  peer_connection.rs  rtp_handler.rs
tests/: audio_tests.rs  e2e_tests.rs  grpc_tests.rs  integration_tests.rs  metrics_tests.rs  turn_detection_tests.rs  webrtc_tests.rs
